--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "docker-elastic",
   "version": "1.0.0",
   "description": "Elastic Dojo",
-  "main": "populate-index.js",
+  "main": "src/populate-index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
